--- a/style2.css
+++ b/style2.css
@@ -30,6 +30,7 @@ body {
   top: 0;
   background-color: white;
   z-index: 100;
+  
 }
 
 #schedule {
@@ -42,6 +43,10 @@ body {
   padding-bottom: 2px;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+#schedule :hover{
+  color: red;
 }
 .email {
   display: flex;
@@ -192,8 +197,20 @@ body {
   padding-top: 10px;
 }
 
+
+.background1{
+  background-image:url(./images/bg\ vid.jpg);
+  filter: blur(8px);
+  -webkit-filter: blur(7px);
+  position: absolute; 
+  height: 400px; 
+  width: 100%; 
+  background-position: center; 
+  z-index: -1; 
+}
 .video{
   text-align: center;
+  padding-top: 50px; 
  
 }
 
@@ -291,7 +308,114 @@ body {
   margin-right: auto;
 }
 
+.background2{
+  background-image:url(./images/bg\ map.jpg);
+  filter: blur(8px);
+  -webkit-filter: blur(5px);
+  position: absolute; 
+  height: 450px; 
+  width: 100%; 
+  background-position: center; 
+  z-index: -1; 
+}
 
+.container{
+  padding-top: 20px;
+  text-align: center;
+  
+}
+
+.map{
+  margin-left: 50px;
+  padding-left: 50px;
+  display: block;
+  width: 100%;
+}
+.form{
+ align-items: center;
+ justify-content: center;
+ width: 500px;
+ height: 520px;
+ margin-right: 100px;
+ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2) ; 
+ border-radius: 10px;
+ padding-left: 50px;
+ padding-top: 30px;
+ padding-bottom: 20px;
+ background-color: white;
+}
+
+.ip{
+  background-color: rgb(247, 247, 247);
+  border-color: rgb(247, 247, 247) ;
+  border-width: thin;
+  border-radius: 5px;
+}
+
+#send-message{
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border-radius: 20px;
+  width: 130px;
+  
+}
+
+.map-form{
+  display: flex;
+  gap: 150px;
+}
+
+.contact-details{
+  display: flex;
+  padding-left: 100px;
+  gap: 100px;
+  
+}
+
+#phoneicon{
+  width: 30px; 
+  height: 30px;
+  padding-top: 25px;
+}
+
+.phone{
+  display: flex;
+  gap: 10px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2) ;
+  width: 200px;
+  padding-left: 20px;
+  height: 70px;
+  padding-bottom: 5px;
+  border-radius: 10px;
+}
+
+#mailicon{
+  width: 40px; 
+  height: 40px;
+  padding-top: 20px;
+}
+
+.mail-bottom{
+  display: flex;
+  gap: 10px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2) ;
+  width: 200px;
+  padding-left: 20px;
+  height: 70px;
+  padding-bottom: 5px;
+  border-radius: 10px;
+}
+
+.footer{
+  background-color: rgb(25, 22, 22);
+  height: 100px;
+  color: white;
+}
+#copyright{
+  text-align: center;
+  padding-top: 40px;
+}
 
 
 
