--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+/* PAGE-1 */
+
 body {
   padding: 0px;
   margin: 0px;
@@ -15,11 +17,13 @@ body {
 
 .menu {
   display: flex;
-  gap: 30px;
   padding-top: 30px;
   padding-right: 20px;
   flex-direction: row;
+  color: black;
+  text-decoration: none;
 }
+
 
 .menu :hover{
   color: red;
@@ -57,6 +61,13 @@ body {
   gap: 10px;
 }
 
+.vertical-line{
+  border-left:1px solid black;
+  height: 20px;
+  padding-top: 4px;
+  margin-top: 14px;
+}
+
 .location {
   display: flex;
   gap: 0px;
@@ -70,15 +81,16 @@ body {
   justify-content: space-between;
 }
 .social {
-  gap: 10px;
-  padding-right: 20px;
+  display: flex;
+  gap: 5pxpx;
+  padding-right: 70px;
 }
 .villahead {
   padding-left: 25px;
 }
-#home {
+/* #home {
   color: red;
-}
+} */
 
 #bgimg {
   width: 100%;
@@ -349,6 +361,7 @@ body {
   background-color: rgb(247, 247, 247);
   border-color: rgb(247, 247, 247) ;
   border-width: thin;
+  width: 450px;
   border-radius: 5px;
 }
 
@@ -416,11 +429,6 @@ body {
   text-align: center;
   padding-top: 40px;
 }
-
-
-
-
-
 
 
 /* Media query for mobile view */
@@ -534,20 +542,142 @@ body {
    margin-right: auto;
   
   }
-
-
   .villa1{
     width: 200px;
     height: 370px;
 
   }
-
   #vill1img{
     width: 270px;
     height: 250px;
   }
-
-
 }
 
+/* PROPERTY*/
+.bgprop{
+  background-image: url("./images/prop\ bg.jpg");
+  height: 350px;
+  width: 100%;
+ position: relative;
+ 
+ 
+}
+.color-overlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #261809;
+  opacity: 0.6;
+}
+.txt{
+ position: absolute;
+ display: block;
+ top: 25%;
+ left: 40%;
+}
 
+.home-prop{
+ 
+  display: flex;
+  color: black;
+  width: 145px;
+  padding-left: 10px;
+  font-size: 15px;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+  
+  
+  
+}
+#homeref{
+  text-decoration: none;
+  color:black;
+  padding-top: 15px;
+  
+}
+.prop-head{
+  
+  color: white;
+  text-align: center;
+  font-size: 25px;
+}
+
+.button{
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.btn{
+  background-color: rgb(38, 36, 36);
+  color: white;
+  width: 80px;
+  padding-left: 19px;
+  height: 40px;
+  padding-top: 20px;
+  border-radius: 15px;
+}
+#vil{
+  padding-left: 35px;
+}
+.pageno{
+  display: flex; 
+  gap: 30px;
+  justify-content: center;
+}
+.pg{
+  background-color: black;
+  color:white;
+  border-radius: 30px;
+  width: 10px;
+  height: 28px;
+  padding-left: 17px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-decoration: none;
+}
+.pg :hover{
+  background-color: red;
+}
+
+#arrow{
+  padding-right: 12px;
+  padding-left: 15px;
+  width: 12px;
+}
+
+ /* CONTACT-US */
+ .contact-body{
+ margin-left: 30px;
+ width: 50%;
+ }
+ .cont-form{
+  display: flex;
+  gap: 50px;
+ }
+
+ #getintouch{
+  font-size: 40px;
+ }
+ .form-pg3{
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2) ;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  height: 520px;
+  margin-right: 100px;
+  border-radius: 10px;
+  padding-left: 50px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  background-color: white;
+ }
+ .contact-info{
+  padding-left: 40px;
+ }
+
+.map-2{
+  margin: 40px;
+}
